# Writingway

./: main.py  pyproject.toml  requirements.txt  setup_writingway.bat  version.json  workbench.py
.github/: dependabot.yml
.github/workflows/: build-osx-arm64.yml
compendium/: ai_compendium_dialog.py  compendium_manager.py  compendium_panel.py  context_panel.py  enhanced_compendium.py  pov_combobox.py
muse/: prompt_handler.py  prompt_panel.py  prompt_preview_dialog.py  prompt_utils.py
project_window/: __init__.py  activity_bar.py  bottom_stack.py  embedded_prompts_panel.py  focus_mode.py  global_toolbar.py  progress_dialog.py  project_model.py  project_settings_manager.py  project_structure_manager.py  project_tree_widget.py  project_window.py  rewrite_feature.py  scene_editor.py  search_replace_panel.py  summary_controller.py  summary_model.py  summary_service.py  token_limit_dialog.py  tree_manager.py
pyinstaller/: Writingway_osx.spec
settings/: autosave_manager.py  backup_manager.py  llm_api_aggregator.py  llm_settings_dialog.py  llm_worker.py  provider_dialog.py  provider_info_dialog.py  selection_manager.py  settings_dialog.py  settings_manager.py  theme_manager.py  translation_manager.py
util/: base_text_analysis.py  color_manager.py  find_dialog.py  ia_downloaded_tab.py  ia_item_details_dialog.py  ia_login_tab.py  ia_manage_tab.py  ia_search_download_tab.py  ia_window.py  statistics.py  text_analysis.py  text_analysis_de.py  text_analysis_es.py  text_analysis_fr.py  text_analysis_gui.py  text_analysis_pl.py  tts_manager.py  web_llm.py  whisper_app.py  wikidata_dialog.py
util/analyzers/: text_analysis.py  text_analysis_da.py  text_analysis_de.py  text_analysis_el.py  text_analysis_es.py  text_analysis_fi.py  text_analysis_fr.py  text_analysis_hr.py  text_analysis_it.py  text_analysis_ja.py  text_analysis_ko.py  text_analysis_lt.py  text_analysis_mk.py  text_analysis_nb.py  text_analysis_nl.py  text_analysis_pl.py  text_analysis_pt.py  text_analysis_ro.py  text_analysis_ru.py  text_analysis_sl.py  text_analysis_sv.py  text_analysis_uk.py  text_analysis_zh.py
workshop/: audio_utils.py  chat_session.py  conversation_history_manager.py  conversation_manager.py  embedding_manager.py  new_chat_dialog.py  project_context_provider.py  rag_manual_processing.py  rag_pdf.py  rag_smart_qa.py  rag_utils.py  rag_visual_explorer.py  workshop_controller.py  workshop_model.py  workshop_view.py
